// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test badge example 1`] = `
"<div class="badge-example">
  <div class="app-demo-title">基础用法</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">8</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">76</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">NEW</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--bubble smy-badge__content--fixed smy-badge__content--top-right">NEW</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">最大值</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">9+</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">20+</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">99+</span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">不同定位</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">200</span></transition-stub> <span class="title">右上</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--bottom-right">200</span></transition-stub> <span class="title">右下</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-left">200</span></transition-stub> <span class="title">左上</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--bottom-left">200</span></transition-stub> <span class="title">左下</span>
    </div>
  </div>
  <div class="app-demo-title">是否显示(点击“标题”改变状态)</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">8</span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">自定义颜色</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">8</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">76</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right">NEW</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--bubble smy-badge__content--fixed smy-badge__content--top-right">NEW</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">自定义位置</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right" style="right: 0px; top: 0px;">200</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right" style="right: -10px; top: 10px;">200</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--top-right" style="right: -10px; top: 20px;">200</span></transition-stub> <span class="title">标题</span>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--fixed smy-badge__content--bottom-right" style="right: -10px; bottom: -10px;">200</span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">自定义徽标内容</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--icon smy-badge__content--fixed smy-badge__content--top-right"><span class="smy-icon" style="transition-duration: 0ms;"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m12.89 3 1.96.4L11.11 21l-1.96-.4zm6.7 9L16 8.41V5.58L22.42 12 16 18.41v-2.83zM1.58 12 8 5.58v2.83L4.41 12 8 15.58v2.83z"></path></svg></span></span></transition-stub> <span class="title">标题</span>
    </div>
  </div>
  <div class="app-demo-title">独立存在</div>
  <div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content">8</span></transition-stub>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content">76</span></transition-stub>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content">NEW</span></transition-stub>
    </div>
    <div class="smy-badge smy--box">
      <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--bubble">NEW</span></transition-stub>
    </div>
  </div>
</div>"
`;

exports[`test badge position 1`] = `
"<div class="smy-badge smy--box">
  <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub>
  <div style="width: 100px; height: 100px;"></div>
</div>"
`;

exports[`test badge position 2`] = `
"<div class="smy-badge smy--box" position="right-bottom">
  <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub>
  <div style="width: 100px; height: 100px;"></div>
</div>"
`;

exports[`test badge position 3`] = `
"<div class="smy-badge smy--box" position="left-top">
  <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub>
  <div style="width: 100px; height: 100px;"></div>
</div>"
`;

exports[`test badge position 4`] = `
"<div class="smy-badge smy--box" position="left-bottom">
  <transition-stub name="smy-badge-fade"><span class="smy-badge__content smy-badge__content--dot smy-badge__content--fixed smy-badge__content--top-right"></span></transition-stub>
  <div style="width: 100px; height: 100px;"></div>
</div>"
`;

exports[`test badge style 1`] = `
"<div class="smy-badge smy--box">
  <transition-stub name="smy-badge-fade"><span top="100" right="1000" zindex="500" class="smy-badge__content smy-badge__content--dot" style="background: rgb(98, 0, 234);"></span></transition-stub>
</div>"
`;
